Fixes #83: div.tip backround is too dark.

--- a/template/theme/sass/partials/_contents.scss
+++ b/template/theme/sass/partials/_contents.scss
@@ -180,7 +180,7 @@ It is forbidden to copy and distribute this file in its original or modified for
 		border: 1px solid #aaa;
 		padding: $std-standard-vgap $std-standard-vgap $std-standard-vgap 70px;
 		margin: 1em 0;
-		background: #eee;
+		background: #f5f5f5;
 		overflow: hidden;
 		position: relative;
 
